login_grafica_fim

--- a/projeto_pet_web/src/main/webapp/main.css
+++ b/projeto_pet_web/src/main/webapp/main.css
@@ -12,11 +12,11 @@ body{
 .form_index{
     width: 500px;
     margin: auto;
-    padding-top: 5%;
+    padding-top: 8%;
 }
 
 .centro_index{
-  color: aqua;
+  color: rgb(55, 90, 15);
   font-family: fantasy;
   text-align: center;
 }
@@ -25,11 +25,11 @@ body{
   width: 200px;  
 }
 
+
 .function_index > label{
   width: 100%;
   display: block;
 }
-
 
 
 .function_index > input{
@@ -44,11 +44,20 @@ body{
   margin-bottom: 10px;
 }
 
-
-.button_acess{
-  width: 100%;
-  color: chartreuse;
+.button {
+  border: 100% black; 
+  color: black;
+  padding: 15px 32px;
   text-align: center;
-  box-shadow: 1px 1px 5px #ccc;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 20px 2px;
+  cursor: pointer;
+  width: 100%;
+  border-radius:30px;
+  box-shadow: 10px 10px 5px rgb(78, 78, 78);
+}  
 
-}
+.button1 {background-color: #B2FFD9;
+  ;} 
